<resources>
    <string name="app_name">Planet Quiz</string>
    <string name="select_question">Select a question to answer:</string>
    <string name="question_1">What is the largest planet?</string>
    <string name="question_2">Which planet has the most moons?</string>
    <string name="question_3">Which planet spins on its side?</string>

    <string name="mercury">MERCURY</string>
    <string name="venus">VENUS</string>
    <string name="earth">EARTH</string>
    <string name="mars">MARS</string>
    <string name="jupiter">JUPITER</string>
    <string name="saturn">SATURN</string>
    <string name="uranus">URANUS</string>
    <string name="neptune">NEPTUNE</string>

    <string name="correct_feedback">CORRECT!</string>
    <string name="wrong_ans">WRONG!</string>
    <string name="wrong_feedback">Please try another question.</string>
    <string name="answer_detail_1">Jupiter is the largest planet and is 2.5 times the mass of all the other planets put together.</string>
    <string name="answer_detail_2">Saturn has the most moons and has 82 moons.</string>
    <string name="answer_detail_3">Uranus spins on its side with its axis at nearly a right angle to the Sun.</string>


</resources>